MU: aggiunte subsezioni lato client e server

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -196,8 +196,14 @@ Il prodotto \`e stato sviluppato come un'applicazione web. \`E possibile utilizz
 funzionalit\`a. Il sistema permette un salvataggio dei disegni che potranno essere ricaricati e aggiornati.
 
 \subsezione{Requisiti tecnici per il funzionamento del programma}
+\subsubsezione{lato client}
 \begin{elencopuntato}[\normindent]
     \item[-] Requisiti software:  Elenco browser supportati, risoluzione ecc..
+    \item[-] Requisiti hardware:  Processore .. memoria RAM ..
+\end{elencopuntato}
+\subsubsezione{lato server}
+\begin{elencopuntato}[\normindent]
+    \item[-] Requisiti software:  JVM, Tomcat
     \item[-] Requisiti hardware:  Processore .. memoria RAM ..
 \end{elencopuntato}
 
@@ -207,10 +213,14 @@ funzionalit\`a. Il sistema permette un salvataggio dei disegni che potranno esse
 Il programma verr\`a fornito come?? con una preinstallazione, pacchettizzato, gi\`a pronto all'installazione??.
 
 \subsezione{Avvio del programma}
+Con il programma vengono consegnati anche un file index.html per l'esecuzione su browser. 
+Per avviare il programma \`e sufficente cliccare sul file.
 
 \subsezione{Descrizione funzionale}
+vari screenshot con relativa descrizione, da fare alla fine
 
 \sezione{Appendice}
 
 \subsezione{Messaggi di errore e loro significato}
+descrizione degli errori, dividendoli tra server e client
 \end{document}
