--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -199,19 +199,23 @@ funzionalit\`a. Il sistema permette un salvataggio dei disegni che potranno esse
 \subsubsezione{lato client}
 \begin{elencopuntato}[\normindent]
     \item[-] Requisiti software:  Elenco browser supportati, risoluzione ecc..
-    \item[-] Requisiti hardware:  Processore .. memoria RAM ..
+    \item[-] Requisiti hardware:  Processore Intel 2GHz o compatibili; 512MB memoria RAM 
 \end{elencopuntato}
 \subsubsezione{lato server}
 \begin{elencopuntato}[\normindent]
     \item[-] Requisiti software:  JVM, Tomcat
-    \item[-] Requisiti hardware:  Processore .. memoria RAM ..
+    \item[-] Requisiti hardware:  Processore Intel 1GHz; 1GB memoria RAM
 \end{elencopuntato}
 
 \sezione{Istruzioni per l'uso}
 
 \subsezione{Installazione del programma}
-Il programma verr\`a fornito come?? con una preinstallazione, pacchettizzato, gi\`a pronto all'installazione??.
+\subsubsezione{lato client}
+Il programma verr\`a fornito pacchettizzato con tutte le librerie necessarie al suo funzionamento. \`E sufficiente avviare lo script per avviare l'installazione del sistema sul proprio computer.
 
+\subsubsezione{lato server}
+Rimandiamo ai seguenti link per l'installazione del server Tomcat e della JVM
+ 
 \subsezione{Avvio del programma}
 Con il programma vengono consegnati anche un file index.html per l'esecuzione su browser. 
 Per avviare il programma \`e sufficente cliccare sul file.
@@ -222,5 +226,9 @@ vari screenshot con relativa descrizione, da fare alla fine
 \sezione{Appendice}
 
 \subsezione{Messaggi di errore e loro significato}
-descrizione degli errori, dividendoli tra server e client
+descrizione degli errori, dividendoli tra server e client\\
+Errore di parsing durante il caricamento di un file SVG.\\
+Errore di comunicazione col server. \\
+Errore interno del server (e.g. non c'e' piu' spazio su disco).\\
+
 \end{document}
