AR: aggiornata tabella delle modifiche

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -2,7 +2,7 @@
 \usepackage{multirow}
 \begin{document}
 
-\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{2.4} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Analisi dei Requisiti} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 
 \begin{titlepage}
@@ -82,6 +82,11 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 				\multirow{1}{*}{RR-RPP} & Cunico Marco\\
                                         & Rizzo Maurizio\\
 										%& \\
+										
+				\hline
+				\multirow{1}{*}{RR-RPP} & Cunico Marco\\
+                                        & \\
+										%& \\
 				\hline
 				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\end{tabular}
@@ -109,6 +114,10 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 									%&  \\
 			\hline
 			\multirow{1}{*}{RR-RPP} & Geremia Mirco\\
+									%& \\
+									
+			\hline
+			\multirow{1}{*}{RPP-RQ} & \\
 									%& \\
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -142,8 +151,14 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+				\hline
+                2.4 & 14$\slash$02$\slash$2009 Modificati UC9 e UC10 per integrazione componente & Cunico Marco\\
+				\hline
+                2.3 & 14$\slash$02$\slash$2009 Inserita tabelle tracciamento "Requisiti-Aspettative" e "Requisiti Fonte Associata" & Cunico Marco\\
+				\hline
+                2.2 & 14$\slash$02$\slash$2009 Riscritte tutte le Precondizioni e Postcondizioni, Modificato UC0 & Cunico Marco\\
                 \hline
-                2.2 & 13$\slash$02$\slash$2009 modifiche e aggiunte dervate da integrazione RR ed RPP & Rizzo Maurizio\\
+                2.1 & 13$\slash$02$\slash$2009 Modifiche e aggiunte derivate da integrazione RR ed RPP & Rizzo Maurizio\\
                 \hline
 				2.0 & 24$\slash$01$\slash$2009 Rilascio per RPP. & Cunico Marco \\
 		\hline
