MU: inserita versione sw utilizzato

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -198,12 +198,14 @@ funzionalit\`a. Il sistema permette un salvataggio dei disegni che potranno esse
 \subsezione{Requisiti tecnici per il funzionamento del programma}
 \subsubsezione{lato client}
 \begin{elencopuntato}[\normindent]
-    \item[-] Requisiti software:  Elenco browser supportati, risoluzione ecc..
+    \item[-] Requisiti software: Firefox 3.2b2 o successivo, Firefox 3.0.6 tutto tranne il disegno di testo, Opera 9.6 tutto tranne il disegno di testo, Chrome (versione attuale), Safari (versione attuale), IE8: tutto tranne il testo e la selezione che risulta non essere ottimale.\\
+    Risoluzione minima consigliata: 1024x768.\\
+N.B. Dove non \`e supportato il testo, c'\`e un supporto minimo: un solo font, colore di riempimento ignorato, set di caratteri minimo. 
     \item[-] Requisiti hardware:  Processore Intel 2GHz o compatibili; 512MB memoria RAM 
 \end{elencopuntato}
 \subsubsezione{lato server}
 \begin{elencopuntato}[\normindent]
-    \item[-] Requisiti software:  JVM, Tomcat
+    \item[-] Requisiti software:  JVM 1.5 o superiore, Tomcat (Bosco..)
     \item[-] Requisiti hardware:  Processore Intel 1GHz; 1GB memoria RAM
 \end{elencopuntato}
 
@@ -217,7 +219,7 @@ Il programma verr\`a fornito pacchettizzato con tutte le librerie necessarie al 
 Rimandiamo ai seguenti link per l'installazione del server Tomcat e della JVM
  
 \subsezione{Avvio del programma}
-Con il programma vengono consegnati anche un file index.html per l'esecuzione su browser. 
+Con il programma viene consegnato anche un file index.html per l'esecuzione su browser. 
 Per avviare il programma \`e sufficente cliccare sul file.
 
 \subsezione{Descrizione funzionale}
