aggiunta classe rotationsetter

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -529,7 +529,6 @@ Estende \textit{Button}.
 \begin{elencopuntato}[\normindent]
 \item[-] \textit{getId()} ritorna \textit{{\_}id};
 \item[-] \textit{getBuilder()} ritorna il tipo di oggetto disegnato tramite la pressione di questo pulsante, per permetterne il riconoscimento al metodo \textit{bindCanvas} in modo da associare correttamente la figura da disegnare al suo pulsante.
-\item[-]  \textit{bindCanvas(toolbar,canvas,canvasObj,visual,figureSet,borderColor)} overriding del metodo ereditato da \textit{Button}, collega il canvas all'azione di clonazione di una figura.
 \end{elencopuntato}
 
 \subsezione{TextButton}
@@ -626,6 +625,19 @@ Legge e modifica \textit{BoundingRectagle}.
 \paragrafo{Metodi pubblici:}
 \begin{elencopuntato}[\normindent]
 \item[-] \textit{BoundingRectagleSetter(bounds)} costruttore. Prende un \textit{BoundingRectagle} e setta il valore dei campi di un dialog statico implementato in HTML. I campi contengono: i valori x ed y dell'inizio di \textit{bounds} e i valori di altezza e larghezza. Collega un evento al pulsante di conferma del dialog, e se l'utente ha modificato i valori, e i valori inseriti sono dei numeri, modifica le corrispondenti propriet\`a di \textit{bounds} ed esegue un refresh.
+\end{elencopuntato}
+
+\subsezione{RotationSetter}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Classe concreta che si occupa di impostare un angolo di rotazione e modificare le coordinate di una figura disegnata sul canvas ruotando la figura selezionata.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Legge e modifica \textit{Rotation}.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+\textit{PropertiesDialog} ne mantiene un'istanza.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\paragrafo{Metodi pubblici:}
+\begin{elencopuntato}[\normindent]
+
 \end{elencopuntato}
 
 
